# sesh-importer

./: .gitignore  README.md  flake.nix  importer.cabal
app/: Db.hs  Gear.hs  Main.hs  Parsers.hs  Schemas.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
fs/: Parsers.fs  Program.fs  importer-fsharp.fsproj
fsharp/: Parsers.fs  Program.fs  importer-fsharp.fsproj
fsharp/src/: Db.fs  Gear.fs  Parsers.fs  Program.fs
gleam/: README.md  gleam.toml  manifest.toml
gleam/src/: db.gleam  gear.gleam  importer.gleam  parsers.gleam
haskell/: README.md  importer.cabal
haskell/app/: Db.hs  Gear.hs  Main.hs  Parsers.hs
hs/app/: Db.hs  Gear.hs  Main.hs
ocaml/: .gitignore  .ocamlformat  README.md  dune-project
ocaml/lib/: db.ml  dune  gear.ml  parsers.ml  types.ml
ocaml/test/: dune
rust/: Cargo.toml
rust/src/: database.rs  gear.rs  main.rs  parsers.rs
saga/: project.toml
saga/src/: Database.saga  Gear.saga  Main.saga  Parsers.saga
saga/src/Db/: Gear.saga  Sesh.saga  WindSeshDetails.saga
typescript/: package-lock.json  package.json
typescript/src/: db.ts  gear.ts  index.ts  parsers.ts  schema.ts
