cabal-version: 3.12
name: importer
version: 0.1.0.0
-- synopsis:
-- description:
license: NONE
author: dylantf
maintainer: dylantf@github
-- copyright:
build-type: Simple
extra-doc-files: README.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable importer
  import: warnings
  main-is: Main.hs
  other-modules:
    Db
    Gear
    Parsers

  default-extensions:
    OverloadedStrings
    TypeApplications

  build-depends:
    base ^>=4.20.0.0,
    bytestring,
    cassava,
    postgresql-simple,
    split,
    time,
    vector,

  hs-source-dirs: app
  default-language: GHC2021
