[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }
tokio = { version = "1.47.1", features = ["full"] }
